--- a/views/parabens.hbs
+++ b/views/parabens.hbs
@@ -1,4 +1,21 @@
-<div class="container">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Decifra-me</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/registrar">Registrar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/enigma/facil/0">Enigmas</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav><div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-8 position-relative">
       <!-- Elementos decorativos -->
@@ -30,13 +47,14 @@
         </button>
 
         <form action="/" method="GET">
-        <button type="submit"
-          class="btn-celebrate"
-          style="background: linear-gradient(45deg, #9370db, #00bfff); box-shadow: 0 5px 0 #7b5cb8;"
-        >
-          <span class="emoji">🔄</span>
-          JOGAR NOVAMENTE
-        </button>
+          <button
+            type="submit"
+            class="btn-celebrate"
+            style="background: linear-gradient(45deg, #9370db, #00bfff); box-shadow: 0 5px 0 #7b5cb8;"
+          >
+            <span class="emoji">🔄</span>
+            JOGAR NOVAMENTE
+          </button>
         </form>
 
         <div style="margin-top: 30px; font-size: 1.1rem;">
