--- a/views/apiview.hbs
+++ b/views/apiview.hbs
@@ -4,10 +4,10 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/auth/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/registrar">Registrar</a>
+          <a class="nav-link" href="/auth/registrar">Registrar</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/enigma/facil/1">Enigmas</a>
