--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,8 +6,8 @@
 <nav class="enigma-navbar">
   <ul class="nav-list">
     <li><a href="/"><i class="fas fa-house"></i> Início</a></li>
-    <li><a href="/login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-    <li><a href="/registrar"><i class="fas fa-user-plus"></i> Registrar</a></li>
+    <li><a href="/auth/login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+    <li><a href="/auth/registrar"><i class="fas fa-user-plus"></i> Registrar</a></li>
     <li><a href="/enigma/facil/2"><i class="fas fa-puzzle-piece"></i> Enigmas</a></li>
     <li><a href="/contato"><i class="fas fa-envelope"></i> Contato</a></li>
   </ul>
