--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,20 +1,29 @@
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-   
-  </head>
-  <body>
 
-  
-    
-{{{body}}}
-   
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
 
-    <script src="/javascripts/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="/javascripts/javascript.js"></script>
-  </body>
+  {{!-- Esse alerta vem controller quando é feito a exlusão de um usuário --}}
+  {{#if alerta}}
+  <script>
+    alert("{{alerta}}");
+  </script>
+  {{/if}}
+</head>
+
+<body>
+
+
+
+  {{{body}}}
+
+
+  <script src="/javascripts/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="/javascripts/javascript.js"></script>
+</body>
+
 </html>
