--- a/views/registrar.hbs
+++ b/views/registrar.hbs
@@ -36,7 +36,7 @@
       </div>
 
       <div class="text-center mt-3">
-        <small>Já tem uma conta? <a href="/login">Faça login</a></small>
+        <small>Já tem uma conta? <a href="/auth/login">Faça login</a></small>
       </div>
     </form>
   </div>
