--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body {
   background-color: #6c757d;
 
 
-} 
+}
 
 /* css da parte de comentário do usuario que eu fiz  */
 
@@ -81,10 +81,23 @@ body {
   color: #FF0000;
   text-decoration: none;
   font-weight: bold;
-  transition: background-color 0.3s ease;
-}
+} 
 
 .nav-list a:hover {
   background-color: #950101;
   color: #FFFFFF;
+}
+
+/* Partee do H1 e H2 colocar diferente */
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  color: #FFFFFF;
+
+}
+
+h1 {
+  font-family: 'Poppins', sans-serif;
+  color: rgb(7, 7, 107);
+
 }
