--- a/views/contato.hbs
+++ b/views/contato.hbs
@@ -5,13 +5,14 @@
 
 <nav class="enigma-navbar">
   <ul class="nav-list">
-    <li><a href="/"><i class="fas fa-house"></i> Início</a></li>
-    <li><a href="/auth/login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-    <li><a href="/auth/registrar"><i class="fas fa-user-plus"></i> Registrar</a></li>
-    <li><a href="/enigma/facil/1"><i class="fas fa-puzzle-piece"></i> Enigmas</a></li>
-    <li><a href="/contato"><i class="fas fa-envelope"></i> Contato</a></li>
+    <li><a href="/"><i class="bi bi-house-door"></i> Início</a></li>
+    <li><a href="/auth/login"><i class="bi bi-box-arrow-in-right"></i> Login</a></li>
+    <li><a href="/auth/registrar"><i class="bi bi-person-plus"></i> Registrar</a></li>
+    <li><a href="/enigma/facil/2"><i class="bi bi-question-circle"></i> Enigmas</a></li>
+    <li><a href="/contato"><i class="bi bi-envelope"></i> Contato</a></li>
   </ul>
 </nav>
+
 
 <body class="bg-dark text-light"></body>
 
