--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css" />
 
   {{!-- Esse alerta vem controller quando é feito a exlusão de um usuário --}}
